Update logo, translate

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home - Homestay Booking{% endblock %}
+{% block title %}Home - Horin{% endblock %}
 
 {% block content %}
 <div class="jumbotron bg-light p-5 rounded animate-fade-in">
