--- a/templates/renter/search.html
+++ b/templates/renter/search.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Search Homestays - Homestay Booking{% endblock %}
+{% block title %}Search Homestays - Horin{% endblock %}
 
 {% block content %}
 <div class="row">
