--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}<span data-translate="login">Login</span> - <span data-translate="homestay-booking">Homestay Booking</span>{% endblock %}
+{% block title %}<span data-translate="login">Login</span> - <span data-translate="homestay-booking">Horin</span>{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
