--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Register - Homestay Booking{% endblock %}
+{% block title %}Register - Horin{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
