--- a/templates/owner/add_room_images.html
+++ b/templates/owner/add_room_images.html
@@ -22,7 +22,7 @@
             
             <!-- Upload Form -->
             <div class="card mb-4">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     <h5 class="mb-0">Upload New Images</h5>
                 </div>
                 <div class="card-body">
@@ -58,7 +58,7 @@
             
             <!-- Existing Images -->
             <div class="card">
-                <div class="card-header bg-secondary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     <h5 class="mb-0">Current Gallery Images</h5>
                 </div>
                 <div class="card-body">
