--- a/templates/owner/book_room.html
+++ b/templates/owner/book_room.html
@@ -16,7 +16,7 @@
   <div class="row">
     <div class="col-md-8 mx-auto">
       <div class="card shadow-sm">
-        <div class="card-header bg-primary text-white">
+        <div class="card-header" style="background-color: #e2b77b; color: white;">
           <h4 class="mb-0" data-translate="book-room-in">Book a Room in: {{ homestay.title }}</h4>
         </div>
         <div class="card-body">
