--- a/templates/renter/view_homestay.html
+++ b/templates/renter/view_homestay.html
@@ -11,7 +11,7 @@
         {% for room in rooms %}
         <div class="col-md-4 mb-4">
             <div class="card room-card">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     Room {{ room.room_number }}
                 </div>
                 <div class="room-image-container">
