--- a/templates/renter/view_room_detail.html
+++ b/templates/renter/view_room_detail.html
@@ -15,7 +15,7 @@
         <!-- Left column: Gallery -->
         <div class="col-lg-8 mb-4">
             <div class="card shadow-sm">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     <h3 class="card-title mb-0"><span data-translate="room">Room</span> {{ room.room_number }}</h3>
                 </div>
                 
@@ -66,7 +66,7 @@
             <!-- Location Card - Below Gallery -->
             {% if room.homestay.address %}
             <div class="card shadow-sm mt-4">
-                <div class="card-header bg-primary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     <h3 class="card-title mb-0" data-translate="location">Location</h3>
                 </div>
                 <div class="card-body">
@@ -96,7 +96,7 @@
         <!-- Right column: Room details -->
         <div class="col-lg-4">
             <div class="card shadow-sm mb-4">
-                <div class="card-header bg-secondary text-white">
+                <div class="card-header" style="background-color: #e2b77b; color: white;">
                     <h4 class="card-title mb-0" data-translate="room-details">Room Details</h4>
                 </div>
                 <div class="card-body">
