--- a/templates/renter/booking_history.html
+++ b/templates/renter/booking_history.html
@@ -27,9 +27,11 @@
                     <td>{{ booking.end_time.strftime('%Y-%m-%d %H:%M') }}</td>
                     <td>${{ "%.2f"|format(booking.total_price) }}</td>
                     <td>
-                        <span class="{{ status_classes[booking.status] }}">
-                            {{ booking.status|title }}
-                        </span>
+                        {% if booking.status == 'rejected' %}
+                            <span class="badge bg-danger">{{ booking.status|title }}</span>
+                        {% else %}
+                            <span class="{{ status_classes[booking.status] }}">{{ booking.status|title }}</span>
+                        {% endif %}
                     </td>
                     <td>
                         <a href="{{ url_for('renter.booking_details', booking_id=booking.id) }}" 
