--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         <div class="container">
             <a class="navbar-brand fw-bold" href="{{ url_for('home') }}" style="color: #333333;">
                 <img src="{{ url_for('static', filename='images/Logo.png') }}" alt="Horin Logo" height="40" class="me-2">
-                <span data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
+                <span class="brand-text" data-translate="homestay-booking" style="font-size: 24px;">Horin</span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
